starlark_syntax/src/syntax/def_tests/pos_after_default.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark_syntax --lib
# ```

Program:
def test(x=1, y): pass

Error: error: positional parameter after non positional
 --> test.star:1:15
  |
1 | def test(x=1, y): pass
  |               ^
  |
